[gd_scene load_steps=6 format=3 uid="uid://bq562nfq7puh"]

[ext_resource type="Script" path="res://Player/Grenade.gd" id="1_ak024"]
[ext_resource type="PackedScene" path="res://Player/GrenadeVisuals/grenade/grenade.tscn" id="2_6f7t1"]
[ext_resource type="AudioStream" uid="uid://csou1m38pk3m4" path="res://Player/Sounds/musket-explosion-6383.wav" id="3_7x8ud"]

[sub_resource type="SphereShape3D" id="SphereShape3D_uuqo3"]
radius = 3.6

[sub_resource type="SphereShape3D" id="SphereShape3D_mydce"]
radius = 0.1

[node name="Grenade" type="CharacterBody3D"]
top_level = true
collision_layer = 0
collision_mask = 2
script = ExtResource("1_ak024")

[node name="ExplosionArea" type="Area3D" parent="."]

[node name="CollisionShape3d" type="CollisionShape3D" parent="ExplosionArea"]
shape = SubResource("SphereShape3D_uuqo3")

[node name="grenade" parent="." instance=ExtResource("2_6f7t1")]

[node name="CollisionShape3d" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_mydce")

[node name="ExplosionSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_7x8ud")
pitch_scale = 2.0

[node name="ExplosionStartTimer" type="Timer" parent="."]
wait_time = 0.075
one_shot = true
